cambio en la generacion de qr

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <label for="carrera">Carrera:</label>
                 <select name="" id="carrera" required>
                     <option value="derecho">Derecho</option>
-                    <option value="diseño">Diseño Grafico</option>
+                    <option value="diseno">Diseño Grafico</option>
                     <option value="turismo">Turismo</option>
                 </select>
                 <br>
